[tool.poetry]
name = "poetry-ai-devs"
version = "0.1.0"
description = ""
authors = ["Jan Rutkowski <janek.rut94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
click = "^8.1.7"
black = "^24.3.0"
isort = "^5.13.2"
langchain = "^0.1.13"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"